[gd_scene load_steps=5 format=3 uid="uid://cn4vu8x3prjw6"]

[ext_resource type="Script" path="res://src/ui/livekit/components/connection_panel.gd" id="1_conn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.13, 0.16, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12
content_margin_top = 12
content_margin_right = 12
content_margin_bottom = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_input"]
content_margin_left = 10
content_margin_top = 8
content_margin_right = 10
content_margin_bottom = 8
bg_color = Color(0.09, 0.10, 0.11, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.24, 0.26, 0.30, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
content_margin_left = 15
content_margin_top = 8
content_margin_right = 15
content_margin_bottom = 8
bg_color = Color(0.24, 0.26, 0.30, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_primary"]
content_margin_left = 15
content_margin_top = 8
content_margin_right = 15
content_margin_bottom = 8
bg_color = Color(0.30, 0.45, 0.85, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ConnectionPanel" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_conn")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SectionTitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "CONNECTION"

[node name="UsernameRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UsernameEntry" type="LineEdit" parent="VBox/UsernameRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
placeholder_text = "Your Name"

[node name="UpdateNameButton" type="Button" parent="VBox/UsernameRow"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "Update"

[node name="ServerEntry" type="LineEdit" parent="VBox"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
placeholder_text = "wss://your-server.livekit.cloud"

[node name="TokenEntry" type="LineEdit" parent="VBox"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_input")
placeholder_text = "Paste token or use auto-generate"
secret = true

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ConnectButton" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_primary")
text = "Connect"

[node name="DisconnectButton" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
disabled = true
text = "Disconnect"

[node name="HelperButtons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AutoConnectButton" type="Button" parent="VBox/HelperButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "âš¡ Auto Connect"

[node name="GenerateTokenButton" type="Button" parent="VBox/HelperButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "ðŸŽ« Gen Token"

[node name="RoomInfo" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Room: Not connected"
horizontal_alignment = 1

[node name="SandboxHTTPRequest" type="HTTPRequest" parent="."]
